--- a/mooreadvanced/package.json
+++ b/mooreadvanced/package.json
@@ -2,6 +2,7 @@
   "name": "mooreadvanced",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Cian747.github.io/react-gh-pages",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,10 +15,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
+
 }
